# Word-Guessing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  word guessing.py
.github/workflows/: ci.yml
docs/: ADR.md
tests/: test_display.py  test_game.py  test_words.py
word_guessing/: __init__.py  __main__.py  display.py  game.py  main.py  words.py
