[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "word-guessing"
version = "2.0.0"
description = "A classic word-guessing (hangman-style) game in the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["game", "terminal", "hangman", "cli"]

[project.scripts]
word-guessing = "word_guessing.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
branch = true
source = ["word_guessing"]

[tool.coverage.report]
show_missing = true
skip_covered = false
